# studio-rust-mcp-server

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  checks.yml
plugin/: .gitignore  .luaurc  README.md  default.project.json  foreman.toml
plugin/src/: Main.server.luau  MockWebSocketService.luau  Types.luau
plugin/src/Tools/: DeletePart.luau  GetProjectStructure.luau  InsertModel.luau  RunCode.luau
src/: error.rs  install.rs  main.rs  rbx_studio_server.rs
util/: Certificates.p12  config.windows.json.in  sign.macos.sh  sign.windows.ps1
