[package]
name = "rbx-studio-mcp"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "b1542a6153493d078d49b465c1498deac9141e68", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
color-eyre = "0.6"
clap = { version = "4.5.37", features = ["derive"] }
roblox_install = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
native-dialog = "0.8.8"
security-translocate = "0.2.1"
core-foundation = "0.10.0"

[build-dependencies]
rojo = "7.4.4"

[package.metadata.bundle]
name = "Roblox Studio MCP"
description = "Model Context Protocol server for Roblox Studio"
identifier = "com.rbx-mcp.server"
